# btrfsutils

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Cargo.toml  Justfile  README.md  book.toml  deny.toml  flake.nix  nfpm.yaml  rust-toolchain.toml  rustfmt.toml  taplo.toml
cli/: Cargo.toml  LICENSE.md  README.md
cli/src/: balance.rs  check.rs  device.rs  filesystem.rs  inspect.rs  lib.rs  main.rs  property.rs  qgroup.rs  quota.rs  receive.rs  reflink.rs  replace.rs  rescue.rs  restore.rs  scrub.rs  send.rs  stream.rs  subvolume.rs  util.rs
cli/src/balance/: cancel.rs  filters.rs  pause.rs  resume.rs  start.rs  status.rs
cli/src/check/: chunks.rs  csums.rs  errors.rs  extents.rs  fs_roots.rs  root_refs.rs  superblock.rs  tree_structure.rs
cli/src/device/: add.rs  ready.rs  remove.rs  scan.rs  stats.rs  usage.rs
cli/src/filesystem/: commit_stats.rs  defrag.rs  df.rs  du.rs  label.rs  mkswapfile.rs  resize.rs  show.rs  sync.rs  usage.rs
cli/src/inspect/: dump_super.rs  dump_tree.rs  inode_resolve.rs  list_chunks.rs  logical_resolve.rs  map_swapfile.rs  min_dev_size.rs  print_super.rs  print_tree.rs  rootid.rs  subvolid_resolve.rs  tree_stats.rs
cli/src/property/: get.rs  list.rs  set.rs
cli/src/qgroup/: assign.rs  clear_stale.rs  create.rs  destroy.rs  limit.rs  remove.rs  show.rs
cli/src/quota/: disable.rs  enable.rs  rescan.rs  status.rs
cli/src/receive/: dump.rs  ops.rs
cli/src/replace/: cancel.rs  start.rs  status.rs
cli/src/rescue/: chunk_recover.rs  clear_ino_cache.rs  clear_space_cache.rs  clear_uuid_tree.rs  create_control_device.rs  fix_data_checksum.rs  fix_device_size.rs  super_recover.rs  zero_log.rs
cli/src/rescue/chunk_recover/: apply.rs  reconstruct.rs  report.rs  scan.rs
cli/src/scrub/: cancel.rs  limit.rs  resume.rs  start.rs  status.rs
cli/src/subvolume/: create.rs  delete.rs  find_new.rs  flags.rs  get_default.rs  list.rs  set_default.rs  show.rs  snapshot.rs  sync.rs
cli/tests/: arguments.rs  commands.rs  common.rs  help.rs  privileged.rs
cli/tests/commands/: fixture.rs  live.rs
cli/tests/commands/snapshots/: commands__fixture__check_broken_image-2.snap  commands__fixture__check_broken_image.snap  (+63 more)
cli/tests/snapshots/: arguments__balance_cancel.snap  arguments__balance_pause.snap  arguments__balance_resume.snap  arguments__balance_start.snap  arguments__balance_start_missing_path.snap  arguments__balance_start_with_filters.snap  arguments__balance_status.snap  arguments__device_add.snap  arguments__device_add_all_flags.snap  arguments__device_add_enqueue.snap  arguments__device_add_force.snap  arguments__device_add_missing_mount.snap  arguments__device_add_nodiscard.snap  arguments__device_ready.snap  arguments__device_remove.snap  arguments__device_scan.snap  arguments__device_stats.snap  arguments__device_stats_check.snap  arguments__filesystem_defrag.snap  arguments__filesystem_defrag_compress.snap  arguments__filesystem_df.snap  arguments__filesystem_df_missing_path.snap  arguments__filesystem_du.snap  arguments__filesystem_label_get.snap  arguments__filesystem_label_set.snap  arguments__filesystem_mkswapfile.snap  arguments__filesystem_mkswapfile_with_size.snap  arguments__filesystem_resize.snap  arguments__filesystem_resize_missing_path.snap  arguments__filesystem_show.snap  arguments__filesystem_show_no_args.snap  arguments__filesystem_sync.snap  arguments__filesystem_usage.snap  arguments__global_quiet.snap  arguments__global_verbose.snap  arguments__inspect_dump_super.snap  arguments__inspect_dump_super_full_all.snap  arguments__inspect_inode_resolve.snap  arguments__inspect_inode_resolve_missing_args.snap  arguments__inspect_list_chunks.snap  (+323 more)
disk/: Cargo.toml  README.md  build.rs
disk/src/: chunk.rs  items.rs  lib.rs  print.rs  raid56.rs  raw.rs  reader.rs  serialize.rs  stream.rs  superblock.rs  tree.rs  util.rs
fs/: Cargo.toml  PLAN.md  README.md
fs/src/: cache.rs  dir.rs  filesystem.rs  lib.rs  read.rs  stat.rs  xattr.rs
fs/tests/: basic.rs  cache.rs  compression.rs  multisubvol.rs  send.rs
fuse/: Cargo.toml  README.md
fuse/src/: args.rs  dir.rs  fs.rs  inode.rs  ioctl.rs  lib.rs  main.rs  read.rs  run.rs  stat.rs  xattr.rs
fuse/tests/: basic.rs  common.rs  ioctl.rs  mount.rs
mkfs/: Cargo.toml  README.md
mkfs/src/: args.rs  items.rs  layout.rs  lib.rs  main.rs  mkfs.rs  post_bootstrap.rs  rootdir.rs  run.rs  superblock.rs  tree.rs  treebuilder.rs  write.rs
mkfs/tests/: mkfs.rs
mkfs/tests/snapshots/: mkfs__snapshot_no_block_group_tree.snap
stream/: Cargo.toml  README.md
stream/src/: consts.rs  lib.rs  receive.rs  send.rs  stream.rs  verity.rs
stream/tests/: receive.rs
transaction/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
transaction/src/: allocation.rs  balance.rs  buffer.rs  convert.rs  cow.rs  delayed_ref.rs  extent_alloc.rs  extent_buffer.rs  extent_walk.rs  filesystem.rs  free_space.rs  fs_info.rs  inode.rs  items.rs  lib.rs  path.rs  search.rs  serialize.rs  split.rs  test_helpers.rs  transaction.rs
transaction/tests/: integration.rs  proptest_harness.proptest-regressions  proptest_harness.rs  regression.rs
tune/: Cargo.toml  README.md
tune/src/: args.rs  lib.rs  main.rs  run.rs  tune.rs
tune/tests/: help.rs
tune/tests/snapshots/: help__btrfs_tune.snap
uapi/: Cargo.toml  README.md  build.rs
uapi/src/: balance.rs  blkdev.rs  chunk.rs  dedupe.rs  defrag.rs  dev_extent.rs  device.rs  features.rs  fiemap.rs  filesystem.rs  fs_info.rs  inode.rs  ioctls.rs  label.rs  lib.rs  qgroup.rs  quota.rs  raw.rs  receive.rs  reflink.rs  replace.rs  resize.rs  scrub.rs  send.rs  send_receive.rs  space.rs  subvolume.rs  sync.rs  sysfs.rs  tree_search.rs  util.rs  verity.rs
uapi/src/raw/: btrfs_tree.h
uapi/tests/: balance.rs  chunk.rs  common.rs  dedupe.rs  defrag.rs  dev_extent.rs  device.rs  features.rs  fiemap.rs  filesystem.rs  inode.rs  label.rs  qgroup.rs  quota.rs  replace.rs  resize.rs  scrub.rs  send_receive.rs  space.rs  subvolume.rs  sync_test.rs  sysfs.rs  tests.rs  tree_search.rs
util/testing/: Cargo.toml
util/testing/src/: lib.rs
(+32 files in other folders)
