[workspace]
members = ["uapi", "disk", "stream", "cli", "mangen"]
default-members = ["uapi", "disk", "stream", "cli"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "GPL-2.0-only"
repository = "https://github.com/rustutils/btrfs-progrs"
homepage = "https://github.com/rustutils/btrfs-progrs"

[workspace.dependencies]
libc = "0.2"
nix = { version = "0.31.2", features = ["ioctl", "fs"] }
bitflags = "2"
uuid = { version = "1", features = ["v4", "v7"] }
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "wrap_help", "suggestions"] }
env_logger = "0.11.9"
log = "0.4.29"
crc32c = "0.6"
bindgen = "0.72.1"

btrfs-uapi = { path = "uapi", version = "0.3.0" }
btrfs-disk = { path = "disk", version = "0.3.0" }
btrfs-stream = { path = "stream", version = "0.3.0" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
