[workspace]
members = ["uapi", "disk", "stream", "cli", "mkfs", "tune", "util/gen"]
default-members = ["uapi", "disk", "stream", "cli", "mkfs", "tune"]
resolver = "2"

[workspace.metadata.crane]
name = "btrfs"

[workspace.package]
version = "0.8.0"
edition = "2024"
license = "GPL-2.0-only"
repository = "https://github.com/rustutils/btrfsutils"
homepage = "https://rustutils.gitlab.io/btrfsutils"

[workspace.dependencies]
libc = "0.2"
nix = { version = "0.31.2", features = ["ioctl", "fs"] }
bitflags = "2"
uuid = { version = "1", features = ["v4", "v7"] }
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "wrap_help", "suggestions"] }
env_logger = "0.11.9"
log = "0.4.29"
bytes = "1"
crc32c = "0.6"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
sha2 = "0.10"
blake2 = "0.10"
flate2 = "1"
zstd = "0.13"
lzokay = "2"
cols = { version = "0.3.1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
insta = "1"
bindgen = "0.72.1"

btrfs-uapi = { path = "uapi", version = "0.8.0" }
btrfs-disk = { path = "disk", version = "0.8.0" }
btrfs-stream = { path = "stream", version = "0.8.0" }
btrfs-mkfs = { path = "mkfs", version = "0.8.0" }
btrfs-tune = { path = "tune", version = "0.8.0" }
btrfs-cli = { path = "cli", version = "0.8.0" }

# Optimize compression libraries in dev/test builds so gzip snapshot
# tests don't take forever.
[profile.dev.package.flate2]
opt-level = 3
[profile.dev.package.miniz_oxide]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
