[package]
name = "btrfs-cli"
version.workspace = true
edition.workspace = true
description = "User-space command-line tool for inspecting and managing Btrfs filesystems"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
categories = ["command-line-utilities", "filesystem"]
keywords = ["btrfs", "filesystem", "cli", "linux", "storage"]
default-run = "btrfs"

[[bin]]
name = "btrfs"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
btrfs-disk = { workspace = true }
btrfs-mkfs = { workspace = true, optional = true }
btrfs-stream = { workspace = true, features = ["receive"] }
btrfs-transaction = { workspace = true }
btrfs-tune = { workspace = true, optional = true }
btrfs-uapi = { workspace = true }
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
cols = { workspace = true }
clap = { workspace = true }
console = "0.15"
env_logger = { workspace = true }
flate2 = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
lzokay = { workspace = true }
nix = { workspace = true }
regex-lite = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
zstd = { workspace = true }

[features]
default = []
mkfs = ["dep:btrfs-mkfs"]
tune = ["dep:btrfs-tune"]
multicall = []

[dev-dependencies]
insta = "1"
tempfile = "3"
