[package]
name = "btrfs-disk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Platform-independent parsing and writing of btrfs on-disk structures"
readme = "README.md"
categories = ["filesystem", "parser-implementations"]
keywords = ["btrfs", "filesystem", "parser", "userspace"]

[dependencies]
crc32c = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }
