[package]
name = "btrfs-fs"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true
homepage.workspace = true
description = "High-level filesystem API on top of btrfs-disk: lookup, readdir, read, xattr."
readme = "README.md"
rust-version = "1.87"

[package.metadata.docs.rs]
all-features = true

[dependencies]
btrfs-disk = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
lzokay = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
btrfs-test-utils = { workspace = true }
tempfile = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
