[package]
name = "btrfs-fuse"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true
homepage.workspace = true
description = "Userspace FUSE driver for btrfs, built on btrfs-disk."
readme = "README.md"

[[bin]]
name = "btrfs-fuse"
path = "src/main.rs"

[dependencies]
btrfs-disk = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
fuser = { version = "0.17" }
libc = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
lzokay = { workspace = true }

[dev-dependencies]
btrfs-test-utils = { workspace = true }
tempfile = { workspace = true }
