[package]
name = "btrfs-fuse"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true
homepage.workspace = true
description = "Userspace FUSE driver for btrfs, built on btrfs-disk."
readme = "README.md"
rust-version = "1.87"

# Linux-only (depends on `fuser`, which targets FUSE on Linux).
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "btrfs-fuse"
path = "src/main.rs"

[dependencies]
btrfs-fs = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
fuser = { version = "0.17" }
