[package]
name = "btrfs-fuse"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true
homepage.workspace = true
description = "Userspace FUSE driver for btrfs, built on btrfs-disk."
readme = "README.md"
rust-version = "1.87"
# Depends on a git fork of `fuser` carrying the `ReplyIoctl::retry`
# API (PR pending upstream). cargo refuses to publish crates with
# git deps; flip back to `true` once the upstream `fuser` release
# ships with the API and we can switch to the registry version.
publish = false

# Linux-only (depends on `fuser`, which targets FUSE on Linux).
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "btrfs-fuse"
path = "src/main.rs"

[dependencies]
btrfs-fs = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
# Pinned to xfbs/fuser PR carrying `ReplyIoctl::retry` and the
# `arg: u64` parameter on `Filesystem::ioctl`. Needed for
# variable-size btrfs ioctls (TREE_SEARCH_V2, INO_PATHS, ...).
# Replace with the next published `fuser` (≥ 0.18 once the PR
# lands) and drop the git source. Version pin satisfies
# `cargo deny`'s wildcard check.
fuser = { version = "0.17", git = "https://github.com/xfbs/fuser.git", rev = "37bfb7fdc7f454c70c54c931ef75c71240c0ddea" }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
bytes = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
btrfs-test-utils = { workspace = true }
tempfile = { workspace = true }
xattr = "1"
