[package]
name = "btrfs-mkfs"
version.workspace = true
edition.workspace = true
description = "Create btrfs filesystems"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
categories = ["command-line-utilities", "filesystem"]
keywords = ["btrfs", "filesystem", "mkfs", "linux", "storage"]

[lib]
name = "btrfs_mkfs"
path = "src/lib.rs"

[[bin]]
name = "btrfs-mkfs"
path = "src/main.rs"

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
flate2 = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
btrfs-disk = { workspace = true }
btrfs-transaction = { workspace = true }
btrfs-uapi = { workspace = true }
crc32c = { workspace = true }
xxhash-rust = { workspace = true }
sha2 = { workspace = true }
blake2 = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
lzokay = { workspace = true }
