[package]
name = "btrfs-stream"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true
homepage.workspace = true
description = "Btrfs send stream parser and receive operations"
readme = "README.md"
categories = ["filesystem", "parser-implementations"]
keywords = ["btrfs", "filesystem", "send", "receive", "stream"]

[dependencies]
crc32c = { workspace = true }
thiserror = "2"
uuid = { workspace = true }

# receive feature dependencies
anyhow = { workspace = true, optional = true }
btrfs-uapi = { workspace = true, optional = true }
nix = { workspace = true, optional = true }
flate2 = { version = "1", optional = true }
zstd = { version = "0.13", optional = true }
lzo1x = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }

[[test]]
name = "receive"
required-features = ["receive"]

[features]
receive = ["dep:anyhow", "dep:btrfs-uapi", "dep:nix", "dep:flate2", "dep:zstd", "dep:lzo1x"]
