[package]
name = "btrfs-stream"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true
homepage.workspace = true
description = "Btrfs send stream parser and receive operations"
readme = "README.md"
categories = ["filesystem", "parser-implementations"]
keywords = ["btrfs", "filesystem", "send", "receive", "stream"]
rust-version = "1.85.1"

# `receive` feature pulls in btrfs-uapi (Linux-only) and contains the
# ReceiveContext API; build with --all-features and a Linux target so
# both halves of the crate appear in docs.
[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
crc32c = { workspace = true }
thiserror = "2"
uuid = { workspace = true }

# receive feature dependencies
anyhow = { workspace = true, optional = true }
btrfs-uapi = { workspace = true, optional = true }
nix = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }
lzokay = { workspace = true, optional = true }

[dev-dependencies]
btrfs-test-utils = { workspace = true }
tempfile = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
lzo1x = "0.2"

[[test]]
name = "receive"
required-features = ["receive"]

[features]
receive = [
  "dep:anyhow",
  "dep:btrfs-uapi",
  "dep:nix",
  "dep:flate2",
  "dep:zstd",
  "dep:lzokay",
]
