[package]
name = "btrfs-transaction"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true
homepage.workspace = true
description = "Userspace transaction infrastructure for modifying btrfs filesystems"
readme = "README.md"
categories = ["filesystem"]
keywords = ["btrfs", "filesystem", "transaction", "userspace"]

[dependencies]
btrfs-disk = { workspace = true }
bytes = { workspace = true }
crc32c = { workspace = true }
flate2 = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
proptest = "1"
test-strategy = "0.4"
