[package]
name = "btrfs-tune"
version.workspace = true
edition.workspace = true
description = "Tune btrfs filesystem parameters"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories = ["command-line-utilities", "filesystem"]
keywords = ["btrfs", "filesystem", "tune", "linux", "storage"]
rust-version = "1.88"

# Linux-only (transitively pulls in btrfs-uapi).
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "btrfs_tune"
path = "src/lib.rs"

[[bin]]
name = "btrfs-tune"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
btrfs-disk = { workspace = true }
btrfs-transaction = { workspace = true }
btrfs-uapi = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
clap = { workspace = true }
btrfs-mkfs = { workspace = true }
tempfile = { workspace = true }
