[package]
name = "btrfs-uapi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Typed Rust wrappers around the btrfs userspace interface (ioctls and sysfs)"
readme = "README.md"
categories = ["filesystem", "os::linux-apis"]
keywords = ["btrfs", "ioctl", "filesystem", "linux", "sysfs"]
autobenches = false
autotests = false

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
nix = { workspace = true }
bitflags = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
bindgen = { workspace = true }
