[package]
name = "btrfs-uapi"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true
homepage.workspace = true
description = "Wrappers around the btrfs userspace interface (ioctls and sysfs)"
readme = "README.md"
categories = ["filesystem", "os::linux-apis"]
keywords = ["btrfs", "ioctl", "filesystem", "linux", "sysfs"]
autobenches = false
autotests = false

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
nix = { workspace = true }
bitflags = { workspace = true }
uuid = { workspace = true }
btrfs-disk = { workspace = true }

[dev-dependencies]
tempfile = "3"
btrfs-test-utils = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }
